# NexusDB

./: .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md
core/: .gitignore  CMakeLists.txt  Config.cmake.in
core/include/nexusdb/: audit_logger.h  btree.h  buffer_manager.h  concurrency_manager.h  custom_allocator.h  data_compression.h  distributed_storage_engine.h  encryptor.h  file_manager.h  index_manager.h  lock_free_queue.h  memory_mapped_file.h  nexusdb.h  page.h  prepared_statement.h  query_cache.h  query_optimizer.h  query_processor.h  recovery_manager.h  schema_manager.h  secure_connection_manager.h  storage_engine.h  system_manager.h  transaction_manager.h
core/include/nexusdb/utils/: logger.h
core/src/: audit_logger.cpp  btree.cpp  buffer_manager.cpp  concurrency_manager.cpp  custom_allocator.cpp  data_compression.cpp  distributed_storage_engine.cpp  encryptor.cpp  file_manager.cpp  index_manager.cpp  lock_free_queue.cpp  main.cpp  memory_mapped_file.cpp  nexusdb.cpp  page.cpp  prepared_statement.h  query_cache.cpp  query_optimizer.cpp  query_processor.cpp  recovery_manager.cpp  schema_manager.cpp  secure_connection_manager.cpp  storage_engine.cpp  system_manager.cpp  transaction_manager.cpp
core/src/utils/: logger.cpp
